fixing indexing issue

--- a/generate_SPECTER_embeddings.ipynb
+++ b/generate_SPECTER_embeddings.ipynb
@@ -86,6 +86,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# here, we sort the data by paper ID\n",
+    "sorted_data = []\n",
+    "for i in range(1, len(data)+1):\n",
+    "    for row in data:\n",
+    "        ID = int(row[0])\n",
+    "        if ID == i:\n",
+    "            sorted_data.append(row) \n",
+    "            \n",
+    "data = sorted_data"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -96,14 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 161/161 [00:34<00:00,  4.63it/s]\n"
+      "100%|██████████| 159/159 [00:33<00:00,  4.68it/s]\n"
      ]
     }
    ],
@@ -157,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,12 +220,19 @@
     "for i in range(0, len(distances)):\n",
     "    # using trick from: https://stackoverflow.com/questions/34226400/find-the-index-of-the-k-smallest-values-of-a-numpy-array\n",
     "    # (could use argpartition if we need this fast, but the DHQ corpus is small enough that this is totally fine)\n",
-    "    # NOTE: here, we exploit the fact that the paper ID is equal to the row + 1\n",
-    "    row_nearest_neighbors = np.argsort(distances[i])[:n_nearest_neighbors] + 1\n",
+    "    row_nearest_neighbor_indices = np.argsort(distances[i])[:n_nearest_neighbors+1]\n",
+    "        \n",
+    "    # here, we make sure the indexing is proper, recognizing that paper ID is not guaranteed to equal row number + 1\n",
+    "    row_nearest_neighbors = []\n",
+    "    for j in range(0, len(row_nearest_neighbor_indices)):\n",
+    "        index = row_nearest_neighbor_indices[j]\n",
+    "        row_nearest_neighbors.append(int(data[index][0]))\n",
+    "            \n",
     "    nearest_neighbors.append(row_nearest_neighbors)\n",
     "\n",
+    "# here, we populate papers but also make sure to slice off 0th nearest neighbor (itself)\n",
     "for i in range(0, len(papers)):\n",
-    "    papers[i]['recommendations'] = nearest_neighbors[i]\n"
+    "    papers[i]['recommendations'] = nearest_neighbors[i][1:]"
    ]
   },
   {
@@ -220,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +262,8 @@
     "\n",
     "# next, we update the data\n",
     "for i in range(0, len(data)):\n",
-    "    for j in range(0, len(nearest_neighbors[i])):\n",
+    "    # we start at 1 to skip adding the paper itself as its own nearest neighbor\n",
+    "    for j in range(1, len(nearest_neighbors[i])):\n",
     "        data[i].append(nearest_neighbors[i][j])\n",
     "\n",
     "out_data = [fields] + data\n",
